--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=
 ###< symfony/framework-bundle ###
 DATABASE_URL="mysql://fanah:eval@mysql_db:3306/crm"
